8232168: Fix non wide char canonicalization on Windows

Reviewed-by: clanger, alanb, ccheung